--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
         height: 35vh;
         margin: auto;
     }
-    #header_content img{
+    #child2 img{
         height:70vh;
     }
     #child1{
